# memhook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basic_mapped_view.cpp  basic_mapped_view.hpp  basic_mapped_view_kit.hpp  basic_simple_mapped_view.hpp  callstack.hpp  config.hpp  interprocess_scoped_lock.cpp  interprocess_scoped_lock.hpp  mapped_file_storage.hpp  mapped_storage.hpp  memhook.cpp  memhook_dbg.sh  memview.cpp  sample_threading.cpp  scoped_signal.hpp  scoped_use_count.hpp  shared_memory_storage.cpp  shared_memory_traits.hpp  shared_memory_view.cpp
cmake/: AppendLinkFlags.cmake  Findleveldb.cmake  Findlibunwind.cmake
include/memhook/: basic_mapped_storage.hpp  byteswap.h  byteswap.hpp  callstack.h  callstack.hpp  chrono_utils.h  common.h  common.hpp  config.h  config.hpp  mapped_file_storage.ipp  mapped_file_traits.hpp  mapped_storage.h  mapped_storage.hpp  mapped_storage_creator.h  mapping_traits.h  mapping_traits.hpp  mmf_mapping_traits.h  network.h  network.hpp  network.inc  network.ipp  scoped_signal.h  scoped_signal.hpp  scoped_signal_lock.h  serialization.h  shared_memory_storage.ipp  shared_memory_traits.hpp  shm_mapping_traits.h  sysconfig.h.in  sysconfig.hpp.in  traceinfo.h  traceinfo.hpp
patches/libunwind/dev/: dwarf-memleak.patch
patches/libunwind/v1.1/: dwarf-memleak.patch
scripts/: build_all.sh  build_all_toolchain.sh  build_boost.sh  build_leveldb.sh  build_libunwind.sh  build_memhook.sh  buildall.sh  clang_check.sh  clang_tidy.sh  functions.sh  run_gdb.sh  utils.sh  variables.sh
src/: CMakeLists.txt  basic_mapped_storage.hpp  basic_mapped_view_req.hpp  callstack.cpp  common.hpp  config.hpp  mapped_file_storage.cpp  mapped_file_traits.hpp  mapped_file_view.cpp  mapped_file_view.hpp  mapped_view.hpp  shared_memory_storage.hpp  shared_memory_view.hpp
src/memdb/: CMakeLists.txt  common.h  leveldb_storage.cpp  leveldb_storage.h  memdb.cpp  memdb_server.cpp  memdb_server.h  memdb_server.hpp  memdb_session.cpp  memdb_session.h  memdb_session.hpp
src/memhook/: CMakeLists.txt  atomic-asm-x86.h  atomic-gcc.h  atomic.h  basic_mapped_storage.hpp  boost_chrono.cpp  boost_error_code.cpp  callstack.cpp  callstack_unwinder.cpp  callstack_unwinder.h  check.h  chrono.cpp  common.h  config.hpp  critical_section.cpp  critical_section.hpp  dl_fcn_hook.cpp  dl_fcn_hook.h  dl_functions.cpp  dl_functions.h  dl_functions.hpp  dlfcn_hook.cpp  dlfcn_hook.hpp  elf_injection.cpp  elf_injection.h  engine.cpp  engine.h  error_code.cpp  error_msg.cpp  error_msg.hpp  glibc.cpp  glibc.h  glibc.hpp  log.cpp  log.h  mapped_file_storage.cpp  mapped_file_storage.hpp  mapped_storage.cpp  mapped_storage.hpp  memhook.cpp  (+21 more)
src/memhookcore/: CMakeLists.txt  basic_mapped_storage.h  basic_mapped_storage_creator.h  file_based_mapped_storage_helpers.cpp  file_based_mapped_storage_helpers.h  leveldb_storage.cpp  leveldb_storage.h  mmf_mapped_storage.cpp  network_mapped_storage.cpp  network_mapped_storage.h  scoped_signal.cpp  scoped_signal_lock.cpp  shm_mapped_storage.cpp
src/memstorage/: CMakeLists.txt  basic_mapped_storage.h  basic_mapped_storage_creator.cpp  basic_mapped_storage_creator.h  common.h  mmf_mapped_storage.cpp  mmf_mapped_storage.h  mmf_mapped_storage_creator.cpp  network_mapped_storage.cpp  network_mapped_storage.h  network_mapped_storage_creator.cpp  shm_mapped_storage.cpp  shm_mapped_storage.h  shm_mapped_storage_creator.cpp
src/memview/: CMakeLists.txt  aggregated_printer.h  aggregated_printer.hpp  basic_aggregated_mapped_view.h  basic_aggregated_mapped_view.hpp  basic_mapped_view.h  basic_mapped_view.hpp  basic_mapped_view_factory.h  basic_mapped_view_kit.hpp  basic_mapped_view_req.hpp  basic_mapped_view_works.h  basic_simple_mapped_view.h  basic_simple_mapped_view.hpp  common.h  interprocess_scoped_lock.cpp  interprocess_scoped_lock.h  interprocess_scoped_lock.hpp  mapped_file_view.cpp  mapped_view.h  mapped_view.hpp  mapped_view_base.cpp  mapped_view_base.h  mapped_view_base.hpp  mapped_view_helpers.cpp  mapped_view_helpers.h  mapped_view_options.h  mapped_view_req.hpp  memview.cpp  mmf_mapped_view.cpp  shared_memory_view.cpp  shm_mapped_view.cpp  simple_printer.h  simple_printer.hpp
